--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,7 +1,7 @@
 .toolbar-app-toolbar {
-  height: calc(var(--large-size) * 3);
+  height: calc(var(--size-large) * 3);
   display: flex;
-  justify-content: center;
+  justify-content: left;
   position: fixed;
   bottom: 0;
 }
@@ -11,4 +11,18 @@
   justify-content: space-between;
   align-items: center;
   width: 320px;
+}
+
+.example-container {
+  position: absolute;
+  width: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.example-sidenav {
+  padding: 20px;
 }
