--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,3 +14,11 @@ body {
 .app-toolbar-actions-global {
   transform: translateY(-72px);
 }
+
+.mat-drawer-app-root {
+  .mat-drawer-inner-container {
+    display: flex;
+    flex-direction: column-reverse;
+    height: 1500px;
+  }
+}
