--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
-<mat-drawer-container class="mat-drawer-container-app-root" autosize>
+<mat-drawer-container appScrollToBottom appCssSelector=".mat-drawer-app-root" class="mat-drawer-container-app-root"
+  autosize>
   <mat-drawer [opened]="matDrawerOpened" class="mat-drawer-app-root" mode="side" position="end">
     <div class="mat-drawer-content-app-root">
-      @switch (matDrawertrigger) {
+      @switch (matDrawerTrigger) {
       @case ('actions') {
       <h1>Actions menu</h1>
       }
       @case ('pages') {
       <mat-list class="mat-list-app-root">
         <button class="mat-list-button-app-root" routerLink="/" mat-flat-button><mat-icon>home</mat-icon>Home</button>
-        <button class="mat-list-button-app-root" routerLink="/users" mat-flat-button><mat-icon>group</mat-icon>Users</button>
+        <button class="mat-list-button-app-root" routerLink="/users"
+          mat-flat-button><mat-icon>group</mat-icon>Users</button>
       </mat-list>
 
       <mat-menu>
