--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
       <mat-icon>filter_list</mat-icon>
     </button>
 
-    <button (click)="onOpenDrawer('Pages')" mat-fab color="warn" aria-label="Pages mneu">
+    <button (click)="onOpenDrawer('Pages')" mat-fab color="warn" aria-label="Pages menu">
       <mat-icon>apps</mat-icon>
     </button>
 
