--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,20 +1,7 @@
 <mat-drawer-container class="mat-drawer-container-app-drawer" autosize>
   <mat-drawer [opened]="drawerOpened()" appScrollToBottom class="mat-drawer-app-drawer" mode="side" position="end">
     <mat-list class="mat-list-app-drawer">
-      @switch (drawerTrigger()) {
-        @case ('Actions') {
-          <button mat-flat-button><mat-icon>add</mat-icon>Create</button>
-          <button mat-flat-button><mat-icon>edit</mat-icon>Edit</button>
-          <button mat-flat-button><mat-icon>delete</mat-icon>Delete</button>
-        }
-        @case ('Pages') {
-          <button routerLink="/" mat-flat-button><mat-icon>home</mat-icon>Home</button>
-          <button routerLink="/users" mat-flat-button><mat-icon>group</mat-icon>Users</button>
-        }
-        @case ('Settings') {
-        <h1>Settings menu</h1>
-        }
-      }
+      <app-triggers [drawerTrigger]="drawerTrigger()"></app-triggers>
       <button (click)="onCloseDrawer()" mat-flat-button><mat-icon>close</mat-icon>Close</button>
     </mat-list>
   </mat-drawer>
