--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,9 @@
 <div class="app-login">
   <h1>Login</h1>
   <form class="form-app-login" (submit)="onSubmit()" [formGroup]="loginFormGroup">
-    <app-input label="Email" type="email" [inputFormControl]="emailFormControl"></app-input>
-    <app-input label="Password" type="password" [inputFormControl]="passwordFormControl"></app-input>
+    @for (input of inputs; track input.label) {
+      <app-input label={{input.label}} type={{input.type}} [inputFormControl]="input.formControl"></app-input>
+    }
     <button type="submit" mat-raised-button color="primary" [disabled]="loginFormGroup.invalid">Submit</button>
   </form>
 </div>
