--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,20 +1,22 @@
 <mat-form-field class="mat-form-field-app-input">
   <mat-label>{{label}}</mat-label>
-  <input #inputElementRef [type]="type" matInput [formControl]="inputFormControl" [placeholder]="placeholder">
+  <input #inputElementRef [type]="inputType" matInput [formControl]="inputFormControl" [placeholder]="placeholder">
   @if (inputFormControl.value && clearButton) {
-  <button matSuffix mat-icon-button aria-label="Clear" (click)="inputFormControl.setValue('')">
+  <button type="button" matSuffix mat-icon-button i18n-aria-label aria-label="Clear input"
+    (click)="inputFormControl.setValue('')">
     <mat-icon>close</mat-icon>
   </button>
   }
-  @if (inputFormControl.value && type === 'password') {
-  <button matSuffix mat-icon-button aria-label="Visibility" (click)="togglePasswordVisibility()">
-    <mat-icon>{{inputElementRef.type === 'password' ? 'visibility' : 'visibility_off'}}</mat-icon>
+  @if (inputFormControl.value && inputType === 'password') {
+  <button type="button" matSuffix mat-icon-button i18n-aria-label aria-label="Password visibility"
+    (click)="toggleInputType()">
+    <mat-icon>{{toggleVisibilityIcon()}}</mat-icon>
   </button>
   }
-  @if (inputFormControl.hasError(type) && !inputFormControl.hasError('required')) {
-  <mat-error>Please enter a valid {{label}}</mat-error>
+  @if (inputFormControl.hasError(inputType) && !inputFormControl.hasError('required')) {
+  <mat-error>{{messages.valid}} {{label}}</mat-error>
   }
   @if (inputFormControl.hasError('required')) {
-  <mat-error>{{label}} is <strong>required</strong></mat-error>
+  <mat-error>{{label}} {{messages.required}}</mat-error>
   }
 </mat-form-field>
