--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <h1>Login</h1>
   <form class="form-app-login" (submit)="onSubmit()" [formGroup]="loginFormGroup">
     @for (input of inputs; track input.label) {
-      <app-input label={{input.label}} type={{input.type}} [inputFormControl]="input.formControl"></app-input>
+      <app-input [label]="input.label" [inputType]="input.type" [inputFormControl]="input.formControl"></app-input>
     }
     <button type="submit" mat-raised-button color="primary" [disabled]="loginFormGroup.invalid">Submit</button>
   </form>
