--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-@if (error()) {
-  <div><h1>Error</h1></div>
-}
-<app-login></app-login>
+@if (error()) {<h1>Error</h1>}
 <app-drawer></app-drawer>
-<app-toolbar></app-toolbar>
+@if(login()) {<app-toolbar></app-toolbar>}
