--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -8,5 +8,7 @@
       <button (click)="onClose()" mat-flat-button i18n><mat-icon>close</mat-icon>Close</button>
     </mat-list>
   </mat-drawer>
-  <router-outlet></router-outlet>
+  <div class="router-outlet-app-drawer">
+    <router-outlet></router-outlet>
+  </div>
 </mat-drawer-container>
