--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -9,7 +9,5 @@
   z-index: 1;
   height: var(--toolbar-height);
   display: flex;
-  justify-content: right;
-  position: fixed;
-  bottom: 0;
+  justify-content: end;
 }
