--- a/src/app/components/drawer/drawer.component.css
+++ b/src/app/components/drawer/drawer.component.css
@@ -1,12 +1,10 @@
 .mat-drawer-container-app-drawer {
   width: 100%;
-  height: 100vh;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  padding-bottom: var(--toolbar-height);
+  height: 100%;
 }
 
-.mat-drawer-app-drawer {
-  bottom: var(--toolbar-height);
+.router-outlet-app-drawer {
+  padding: var(--size-small);
 }
 
 .mat-list-app-drawer {
