--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,4 @@
 <div class="app-login">
   <h1>Login</h1>
-  <form class="form-app-login" (submit)="onLogin()" [formGroup]="loginFormGroup">
-    @for (input of inputs; track input.label) {
-      <app-input [label]="input.label" [inputType]="input.type" [inputFormControl]="input.formControl"></app-input>
-    }
-    <button type="submit" mat-raised-button color="primary" [disabled]="loginFormGroup.invalid">Submit</button>
-  </form>
+  <app-form [formGroup]="loginFormGroup" (submitEvent)="onLogin()"></app-form>
 </div>
