--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,15 +1,15 @@
 <mat-toolbar color="primary" class="toolbar-app-toolbar">
   <div class="buttons-app-toolbar">
-    <button (click)="onOpenDrawer('actions')" mat-mini-fab color="warn" aria-label="Actions menu">
-      <mat-icon>filter_list</mat-icon>
+    <button (click)="onOpenDrawer('settings')" mat-mini-fab color="warn" aria-label="Settings menu">
+      <mat-icon>settings</mat-icon>
     </button>
-
-    <button (click)="onOpenDrawer('pages')" mat-fab color="warn" aria-label="Pages menu">
+    
+    <button (click)="onOpenDrawer('pages')" mat-mini-fab color="warn" aria-label="Pages menu">
       <mat-icon>apps</mat-icon>
     </button>
 
-    <button (click)="onOpenDrawer('settings')" mat-mini-fab color="warn" aria-label="Settings menu">
-      <mat-icon>settings</mat-icon>
+    <button (click)="onOpenDrawer('actions')" mat-mini-fab color="warn" aria-label="Actions menu">
+      <mat-icon>filter_list</mat-icon>
     </button>
   </div>
 </mat-toolbar>
