--- a/src/app/components/drawer/drawer.component.css
+++ b/src/app/components/drawer/drawer.component.css
@@ -1,5 +1,5 @@
 .mat-drawer-container-app-drawer {
-  padding: var(--size-small);
+  padding: calc(var(--size-small) / 2);
   width: 100%;
   height: 100%;
 }
@@ -19,4 +19,8 @@
       border-radius: 0;
     }
   }
+}
+
+button[disabled] {
+  background-color: var(--color-common);
 }
