--- a/src/app/components/drawer/drawer.component.css
+++ b/src/app/components/drawer/drawer.component.css
@@ -2,6 +2,12 @@
   padding: calc(var(--size-small) / 2);
   width: 100%;
   height: 100%;
+  .confirm-button-app-drawer {
+    color: var(--color-success);
+  }
+  .cancel-button-app-drawer {
+    color: var(--color-danger);
+  }
 }
 
 .mat-drawer-app-drawer {
