--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,18 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+
+  app-toolbar {
+    position: sticky;
+    z-index: 10;
+    bottom: 0;
+  }
+
+  app-header {
+    position: sticky;
+    z-index: 10;
+    top: 0;
+  }
 }
 
 app-drawer {
