--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,4 +2,5 @@ h1 {
   padding: var(--size-small);
   margin: 0;
   border-bottom: 1px var(--mat-sidenav-container-divider-color) solid;
+  background-color: var(--color-common);
 }
