rename Trigger => Action

--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,15 +1,8 @@
 <mat-drawer-container class="mat-drawer-container-app-drawer" autosize>
   <mat-drawer [opened]="opened()" class="mat-drawer-app-drawer" mode="side" position="end">
     <mat-list class="mat-list-app-drawer">
-      @for (drawerTrigger of createDrawerTriggers(trigger()); track $index) {
-      <button mat-flat-button [routerLink]="getRouterLink(drawerTrigger.name)"
-        [disabled]="drawerTrigger.option?.disabled"><mat-icon>{{drawerTrigger.icon}}</mat-icon>{{drawerTrigger.name}}</button>
-      }
-      <button class="confirm-button-app-drawer" mat-flat-button><mat-icon>task_alt</mat-icon>Confirm</button>
-      <button class="cancel-button-app-drawer" mat-flat-button><mat-icon>cancel</mat-icon>Cancel</button>
+      <app-actions-drawer></app-actions-drawer>
     </mat-list>
   </mat-drawer>
-  <div class="router-outlet-app-drawer">
-    <router-outlet></router-outlet>
-  </div>
+  <router-outlet></router-outlet>
 </mat-drawer-container>
