--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary" class="toolbar-app-toolbar">
   <div class="buttons-app-toolbar">
-    @for (toolbarAct of toolbarActs; track $index) {
-      <button (click)="onOpenDrawer(toolbarAct)" mat-mini-fab color="warn" [attr.aria-label]="toolbarAct.name">
+    @for (toolbarAct of toolbarActs; track toolbarAct.name) {
+      <button [disabled]="toolbarAct.name === 'Navigation' ? false : isDisabled$ | async" (click)="onClick(toolbarAct)" mat-mini-fab
+        color="warn" [attr.aria-label]="toolbarAct.name">
         <mat-icon>{{toolbarAct.signal().icon}}</mat-icon>
       </button>
     }
