--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="mat-drawer-container-app-drawer" autosize>
   <mat-drawer [opened]="opened" class="mat-drawer-app-drawer" mode="side" position="end">
     <mat-list class="mat-list-app-drawer">
-      <app-actions-drawer></app-actions-drawer>
+      <app-btns-drawer></app-btns-drawer>
     </mat-list>
   </mat-drawer>
   <router-outlet></router-outlet>
