--- a/src/app/components/drawer/drawer.component.html
+++ b/src/app/components/drawer/drawer.component.html
@@ -1,8 +1,10 @@
 <mat-drawer-container class="mat-drawer-container-app-drawer" autosize>
-  <mat-drawer [opened]="opened" class="mat-drawer-app-drawer" mode="side" position="end">
-    <mat-list class="mat-list-app-drawer">
-      <app-btns-drawer></app-btns-drawer>
-    </mat-list>
-  </mat-drawer>
+  @if(opened()) {
+    <mat-drawer [opened]="opened()" class="mat-drawer-app-drawer" mode="side" position="end">
+      <mat-list class="mat-list-app-drawer">
+        <app-drawer-taps></app-drawer-taps>
+      </mat-list>
+    </mat-drawer>
+  }
   <router-outlet></router-outlet>
 </mat-drawer-container>
