--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,5 +1,5 @@
-<form class="app-form" (submit)="onSubmitEvent()" [formGroup]="formGroup">
+<!-- <form class="app-form" (submit)="onSubmitEvent()" [formGroup]="formGroup">
   @for (controlInput of controlInputs; track controlInput[0]) {
     <app-input [controlInput]="controlInput"></app-input>
   }
-</form>
+</form> -->
