--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,4 @@
-<table [dataSource]="users()" mat-table class="mat-elevation-z8 table-app-users">
+<!-- <table [dataSource]="users" mat-table class="mat-elevation-z8 table-app-users">
   <ng-container matColumnDef="{{matColumnDefs[0]}}">
     <th mat-header-cell *matHeaderCellDef>No.</th>
     <td mat-cell *matCellDef="let element; let i = index">{{i + 1}}</td>
@@ -31,4 +31,4 @@
 
   <tr mat-header-row *matHeaderRowDef="matColumnDefs"></tr>
   <tr mat-row *matRowDef="let row; columns: matColumnDefs;"></tr>
-</table>
+</table> -->
