--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,1 +1,7 @@
-<p>create works!</p>
+<form>
+  @for (control of controls; track $index) {
+    <app-control [control]="control"></app-control>
+  }
+</form>
+
+<button (click)="onClick()">Add</button>
