--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,3 +1,2 @@
-<app-header [address]="address$ | async"></app-header>
-<app-create [address]="address$ | async"></app-create>
-<app-control></app-control>
+<app-header [First]="First" [Second]="Second"></app-header>
+<app-table></app-table>
