--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,2 +1,2 @@
-<app-header [First]="First" [Second]="Second"></app-header>
-<app-table></app-table>
+<app-header></app-header>
+<router-outlet></router-outlet>
