--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-@if (error()) {<h1>Error</h1>}
+<app-header></app-header>
 <app-drawer></app-drawer>
+<router-outlet></router-outlet>
 <app-toolbar></app-toolbar>
