--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,9 +1,9 @@
-@if (controls()) {
-  <table mat-table [dataSource]="controls()" class="mat-elevation-z8 demo-table">
+@if (hasMatrices()) {
+  <table mat-table [dataSource]="lines(address().page)" class="mat-elevation-z8 demo-table">
     @for (column of displayedColumns; track column) {
       <ng-container matColumnDef={{column}}>
         <th mat-header-cell *matHeaderCellDef>{{column}}</th>
-        <td mat-cell *matCellDef="let element">{{element.value}}</td>
+        <td mat-cell *matCellDef="let element">{{cell(column, element)}}</td>
       </ng-container>
     }
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
