--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-@if (hasMatrices()) {
+<!-- @if (hasMatrices()) {
   <table mat-table [dataSource]="lines(address().page)" class="mat-elevation-z8 demo-table">
     @for (column of displayedColumns; track column) {
       <ng-container matColumnDef={{column}}>
@@ -9,4 +9,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-}
+} -->
