--- a/src/app/components/action/action.component.html
+++ b/src/app/components/action/action.component.html
@@ -1,1 +1,6 @@
-<p>action works!</p>
+<!-- @for (control of formArray?.controls; track $index) {
+  <app-control [control]="control"></app-control> 
+} -->
+
+
+<h1>Actions</h1>
