--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,1 +1,16 @@
-<p>Hell</p>
+<table
+  mat-table
+  [dataSource]="(controlsDto$ | async) || []"
+  class="mat-elevation-z8 demo-table"
+>
+  @for (column of (columns$ | async); track column) {
+    <ng-container [matColumnDef]="column">
+      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.data }}
+      </td>
+    </ng-container>
+  }
+  <tr mat-header-row *matHeaderRowDef="columns$ | async"></tr>
+  <tr mat-row *matRowDef="let row; columns: columns$ | async"></tr>
+</table>
