--- a/src/app/components/page/page.component.html
+++ b/src/app/components/page/page.component.html
@@ -1,16 +1,19 @@
-<table
-  mat-table
-  [dataSource]="(controlsDto$ | async) || []"
-  class="mat-elevation-z8 demo-table"
->
-  @for (column of (columns$ | async); track column) {
-    <ng-container [matColumnDef]="column">
-      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.data }}
-      </td>
-    </ng-container>
+@if (matrixDto$ | async; as matrixDto) {
+  @if (displayedColumns$ | async; as displayedColumns) {
+    <table
+    mat-table
+    [dataSource]="matrixDto.groups"
+    class="mat-elevation-z0"
+  >
+    @for (column of displayedColumns; track column) {
+      <ng-container [matColumnDef]="column">
+        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+        <td mat-cell *matCellDef="let group">{{ "" }}</td>
+      </ng-container>
+    }
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
   }
-  <tr mat-header-row *matHeaderRowDef="columns$ | async"></tr>
-  <tr mat-row *matRowDef="let row; columns: columns$ | async"></tr>
-</table>
+}
