--- a/src/app/components/drawer/drawer-taps/drawer-taps.component.html
+++ b/src/app/components/drawer/drawer-taps/drawer-taps.component.html
@@ -1,4 +1,4 @@
 @for (tap of taps; track tap.name) {
   <button mat-flat-button [disabled]="tap.state.disabled()"
-    (click)="tap.onClick()"><mat-icon>{{tap.state.icon()}}</mat-icon>{{tap.name}}</button>
+    (click)="onClick(tap)"><mat-icon>{{tap.state.icon()}}</mat-icon>{{tap.name}}</button>
 }
