--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<app-drawer></app-drawer>
+<app-sidenav></app-sidenav>
 <router-outlet></router-outlet>
 <app-toolbar></app-toolbar>
