--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ body {
   transform: translateY(-72px);
 }
 
-.mat-drawer-app-drawer {
+.mat-drawer-app-sidenav {
   .mat-drawer-inner-container {
     display: flex;
     flex-direction: column-reverse;
@@ -28,7 +28,7 @@ app-form {
   }
 }
 
-.mat-drawer-container-app-drawer {
+.mat-drawer-container-app-sidenav {
   mat-drawer-content {
     height: calc(-130px + 100vh);
   }
