--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,13 +1,5 @@
-@if (!isFetching() && dto()) {
-  <table mat-table [dataSource]="dataSource()" class="mat-elevation-z0">
-    @for (column of displayedColumns(); track column) {
-      <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
-        <td mat-cell *matCellDef="let fractal"> {{fractal.controls[column].data}} </td>
-      </ng-container>
-    }
-    <tr mat-header-row *matHeaderRowDef="displayedColumns()"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns()"></tr>
-  </table>
-  <router-outlet></router-outlet>
+@if (!isFetching() && fractal()) {
+<app-table [dataSource]="dataSource()" [displayedColumns]="displayedColumns()"
+  [selectedRows]="selectedRows"></app-table>
+<router-outlet></router-outlet>
 }
