--- a/src/app/components/atoms/executor/executor.component.html
+++ b/src/app/components/atoms/executor/executor.component.html
@@ -1,3 +1,3 @@
-<button mat-flat-button [disabled]="tap.state.disabled()" appClick [tap]="tap">
+<button mat-flat-button [disabled]="tap.state.disabled()" appClick [master]="tap">
   <mat-icon>{{tap.state.icon()}}</mat-icon>{{tap.name}}
 </button>
