--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,4 +1,4 @@
-<button mat-mini-fab [disabled]="isFetching()" [attr.aria-label]="tap.name" appClick [tap]="tap">
+<button mat-mini-fab [disabled]="isFetching()" [attr.aria-label]="tap.name" appClick [master]="tap">
   @if (isFetching()) {
   <mat-spinner color="accent" class="spinner" diameter="40"></mat-spinner>
   }
