--- a/src/app/components/molecules/table/table.component.html
+++ b/src/app/components/molecules/table/table.component.html
@@ -1,14 +1,15 @@
 @if (fractal) {
-  @if (fractal.childSort(page()); as displayedColumns) {
-  <table mat-table [dataSource]="fractal.childArr(page())">
-    @for (column of displayedColumns; track column) {
-      <ng-container [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef>{{column}}</th>
-        <td mat-cell *matCellDef="let fractal"> {{fractal.data(column)}} </td>
-      </ng-container>
-    }
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row (click)="[]" [class.row-is-clicked]="true" *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+@if (fractal.childSort(ss.page()); as displayedColumns) {
+<table mat-table [dataSource]="fractal.childArr(ss.page())">
+  @for (column of displayedColumns; track column) {
+  <ng-container [matColumnDef]="column">
+    <th mat-header-cell *matHeaderCellDef>{{column}}</th>
+    <td mat-cell *matCellDef="let fractal"> {{fractal.data(column)}} </td>
+  </ng-container>
   }
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row [class.row-is-clicked]="fls.selected().includes(row)"
+    *matRowDef="let row; columns: displayedColumns" appClick [master]="row"></tr>
+</table>
+}
 }
