--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,6 +1,7 @@
-<button mat-mini-fab [disabled]="isFetching()" [attr.aria-label]="tap.name" appClick [entity]="tap">
-  @if (isFetching()) {
-  <mat-spinner color="accent" class="spinner" diameter="40"></mat-spinner>
+<button mat-mini-fab [disabled]="ss.isFetching()" appClick (onClick)="onClick()" (onHoldClick)="onHoldClick()"
+  (onDoubleClick)="onDoubleClick()">
+  @if (ss.isFetching()) {
+  <mat-spinner color="accent" diameter="40"></mat-spinner>
   }
-  <mat-icon>{{tap.state.icon()}}</mat-icon>
+  <mat-icon>apps</mat-icon>
 </button>
